--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -25,7 +25,8 @@
 </div> -->
 
 <div class="content" role="main">
-  <button mat-raised-button color="primary">Button!</button>
+  <app-output-settings-list>
+  </app-output-settings-list>
 
 </div>
 
