Add profiles component

--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -25,9 +25,10 @@
 </div> -->
 
 <div class="content" role="main">
-  <app-output-settings-list>
+  <app-output-settings-list class="row">
   </app-output-settings-list>
-
+  <app-profile-list class="row">
+  </app-profile-list>
 </div>
 
 
