--- a/webapp/src/app/app.component.css
+++ b/webapp/src/app/app.component.css
@@ -5,19 +5,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 8px 0;
-}
-
-p {
-  margin: 0;
-}
-
 .spacer {
   flex: 1;
 }
@@ -68,11 +55,14 @@ p {
 
 .content {
   display: flex;
-  margin: 82px auto 32px;
-  padding: 0 16px;
-  max-width: 960px;
-  flex-direction: column;
-  align-items: center;
+  padding: 16px 15%;
+  flex-direction: row;
+}
+
+.row {
+  flex: 1;
+  flex-basis: 100%;
+  padding: 16px 16px;
 }
 
 .mat-button {
