--- a/webapp/src/app/output-settings-list/output-settings-list.component.html
+++ b/webapp/src/app/output-settings-list/output-settings-list.component.html
@@ -1,5 +1,5 @@
 <mat-accordion>
-  <app-output-settings>
+  <app-output-settings *ngFor="let spec of specifications; index as i" [specification]="spec" (applied)=applySpec(i) (deleted)="deleteSpec(i)">
   </app-output-settings>
 </mat-accordion>
-<button mat-stroked-button color="secondary" id="add">Add Device</button>
+<button mat-stroked-button id="add" (click)="addSpecification()">Add Device</button>
