--- a/webapp/src/app/output-settings/output-settings.component.html
+++ b/webapp/src/app/output-settings/output-settings.component.html
@@ -4,13 +4,12 @@
       {{specification.ipAddress || "Unspecified Address"}}
     </mat-panel-title>
     <mat-panel-description>
-      Settings
+      Device Settings
     </mat-panel-description>
   </mat-expansion-panel-header>
   <mat-form-field class="form-item">
     <mat-label>IP Address</mat-label>
     <input matInput placeholder="192.168.x.x" [(ngModel)]="specification.ipAddress">
-    <!-- <input matInput placeholder="192.168.x.x" [(ngModel)]="specification.ipAddress"> -->
   </mat-form-field>
   <mat-form-field class="form-item">
     <mat-label>Number of LEDs</mat-label>
@@ -27,6 +26,7 @@
     <label class="label" for="blur-slider">Blur Radius</label>
     <mat-slider id="blur-slider" min="0" max="10" [(ngModel)]="specification.blurRadius" thumbLabel></mat-slider>
   </div>
-  <button mat-raised-button color="primary" id="apply" (click)="apply()">Apply</button>
+  <button mat-raised-button color="accent" id="apply" (click)="apply()">Apply</button>
+  <button mat-stroked-button color="warn" id="remove" (click)="delete()" matTooltip="Delete the device"><mat-icon>delete</mat-icon></button>
 
 </mat-expansion-panel>
