--- a/electron-app/src/styles/Global.css
+++ b/electron-app/src/styles/Global.css
@@ -6,11 +6,10 @@ html, body {
     background-color: #202020;
     display: flex;
     flex-direction: row;
-    height: 100%;
     width: 100%;
+    min-height: 100%;
 }
 .sidebar {
-    height: 100%;
     flex-grow: 0;
     flex-shrink: 0;
     padding: 2em 2em;
@@ -28,7 +27,6 @@ html, body {
 
 .scene {
     flex-grow: 1;
-    height: 100%;
     background-color: #252525;
     padding: 25px 50px;
 }
