Fix sidebar scroll

--- a/electron-app/src/styles/Global.css
+++ b/electron-app/src/styles/Global.css
@@ -10,10 +10,12 @@ html, body {
     min-height: 100%;
 }
 .sidebar {
+    position: fixed;
     flex-grow: 0;
     flex-shrink: 0;
     padding: 2em 2em;
     width: 13em;
+    height: 100%;
     border-right-style: solid;
     border-right-width: 1px;
     border-right-color: rgba(255, 255, 255, 0.12);
@@ -26,9 +28,11 @@ html, body {
 }
 
 .scene {
+    margin-left: 13em;
     flex-grow: 1;
     background-color: #252525;
     padding: 25px 50px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 a {
